# Funcdex-Synthesizer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_config.yaml
examples/data/: example_openapi_spec.json  example_wanted_toolkits.json  gmail_drive_tools.json
examples/utils/: parse_openapi_spec.py  streamlit_inspector.py
scripts/: run_pipeline.py
src/: config.py  dml_parser.py  generate_conversations.py  generate_system_prompt.py  parse_conversations.py  reject_low_quality.py  score_conversations.py
src/data/: tool_definitions.json  wanted_toolkits.json
src/grammars/: dml_grammar_with_thoughts.gbnf  dml_grammar_without_thoughts.gbnf
src/prompts/: conversation_scorer.txt  conversation_system.txt  conversation_user.txt  correction_prompt.txt  correction_system.txt  disposition_generation.txt  dml_format_with_thoughts.txt  dml_format_without_thoughts.txt  dml_instructions_with_thoughts.txt  dml_instructions_without_thoughts.txt  example_conversation_with_thoughts.txt  example_conversation_without_thoughts.txt  scenario_generation.txt  scenario_generation_with_examples.txt  system_prompt_generation.txt  thought_instructions_with_thoughts.txt  thought_instructions_without_thoughts.txt  tool_names_selection.txt  user_request_generation.txt
